--- a/index.html
+++ b/index.html
@@ -4,8 +4,8 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="stylesheet" href="../static/css/Default.css" />
-    <link rel="stylesheet" href="../static/css/normalize.css" />
+    <link rel="stylesheet" href="../css/Default.css" />
+    <link rel="stylesheet" href="../css/normalize.css" />
     <title>Mi calculadora</title>
   </head>
   <body>
@@ -84,6 +84,6 @@
     <footer>
         <p>Develop by David Suarez</p>
     </footer>
-    <script src="../static/js/logica.js"></script>
+    <script src="../js/logica.js"></script>
   </body>
 </html>
